--- a/html/HTML Practice/index.html
+++ b/html/HTML Practice/index.html
@@ -10,11 +10,15 @@
     <style>
 .main-header{
 
-    display: inline;
+    display: flex;
+    justify-content: space-around;
 }
 table, td, tr{
     border: 1px solid black;
     border-collapse: collapse;
+}
+nav, li{
+    display: inline;
 }
     </style>
 </head>
