--- a/html/HTML & CSS/index.html
+++ b/html/HTML & CSS/index.html
@@ -6,21 +6,6 @@
     <title>HTML Practice</title>
     <link rel="shortcut icon" href="logo.png" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
-
-    <style>
-.main-header{
-
-    display: flex;
-    justify-content: space-around;
-}
-table, td, tr{
-    border: 1px solid black;
-    border-collapse: collapse;
-}
-nav, li{
-    display: inline;
-}
-    </style>
 </head>
 <body>
   <header class="main-header">
@@ -69,5 +54,32 @@ nav, li{
         <td> 100 </td>
     </tr>
   </table>
+
+  <form action="" class="ct-form">
+<label for="name"> Your Name :
+    <input type="text" name="Full Name" id="Your Name" placeholder="Name">
+</label>
+<label for="email">
+    Your Email :
+    <input type="email" name="email" id="email">
+</label>
+
+<fieldset>
+    <legend>Pickup duta shag</legend>
+    <label for="shag">
+        <input type="radio" name="shag" id="Laal Shag">
+        Laal Shag
+    </label>
+    <label for="shag">
+        <input type="radio" name="shag" id="Laal Shag">
+        Laal Shag
+    </label>
+    <label for="shag">
+        <input type="radio" name="shag" id="Laal Shag">
+        Laal Shag
+    </label>
+</fieldset>
+
+  </form>
 </body>
 </html>
